acm/np-mgmt-cluster-azure/namespaces/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  labels:
    name: argocd-ingress
  annotations:
    configsync.gke.io/cluster-name-selector: np-mgmt-cluster-azure
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: "nginx"
  rules:
  - host: argocd.coldbrewlabs.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port: 
              name: https
